--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -412,7 +412,11 @@
       "profiles": "Не удалось загрузить браузерные профили",
       "instanceRemove": "Не удалось удалить профиль",
       "paymentError": "Ошибка оплаты",
-      "payment": "Ошибка при оплате подписки"
+      "payment": "Ошибка при оплате подписки",
+      "notFound": {
+        "title": "404",
+        "description": "Страница, которую вы ищете, не существует или она была удалена :("
+      }
     }
   }
 }
