--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -89,6 +89,7 @@
   },
   "utils": {
     "loading": "Загрузка...",
+    "goHome": "На главную",
     "back": "Назад",
     "download": "Загрузить",
     "current": "текущий",
@@ -392,6 +393,10 @@
       "description2": "кнопку чтобы подменить цифровой отпечаток"
     }
   },
+  "notFound": {
+    "title": "404",
+    "description": "Страница, которую вы ищете, не существует или она была удалена :("
+  },
   "messages": {
     "success": {
       "signUpRequest": "На вашу почту отправлено письмо для верификации акккаунта. Если письмо не дошло, проверьте папку \"спам\".",
@@ -412,11 +417,7 @@
       "profiles": "Не удалось загрузить браузерные профили",
       "instanceRemove": "Не удалось удалить профиль",
       "paymentError": "Ошибка оплаты",
-      "payment": "Ошибка при оплате подписки",
-      "notFound": {
-        "title": "404",
-        "description": "Страница, которую вы ищете, не существует или она была удалена :("
-      }
+      "payment": "Ошибка при оплате подписки"
     }
   }
 }
