Text & link fixes

--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -115,7 +115,7 @@
   "form": {
     "fields": {
       "username": "Логин",
-      "email": "E-mail",
+      "email": "E-mail (только gmail)",
       "password": "Пароль",
 
       "advancedSettings": "Продвинутые настройки",
@@ -390,7 +390,7 @@
     "fingerprintGenerator": {
       "warning": "ВНИМАНИЕ: Вам нужно выбрать те же настройки что и у браузера через который вы будете заходить в этот профиль",
       "description1": "Иначе анти-фрод системы смогут вычислить вас",
-      "description2": "кнопку чтобы подменить цифровой отпечаток"
+      "description2": "чтобы подменить цифровой отпечаток"
     }
   },
   "notFound": {
